<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"

    app:cardBackgroundColor="@color/grey"
    app:cardCornerRadius="20dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardelevation="6dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/item_image"
            android:layout_toRightOf="@id/item_image"
            android:text="@string/tituloRecycleView"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/sfprodisplaybold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAlignment="textStart"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creditsRecycleView" />

                <TextView
                    android:id="@+id/item_credits"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:text="@string/numeroCreditosRecycleView" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_hoja" />
            </TableRow>

            <Button
                android:id="@+id/btPlantar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableRight="@drawable/ic_comprararbol"
                android:text="@string/nombreBotonRecycleView" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>